<resources>
    <string name="app_name">AppsRemover</string>
    <string name="nav_header_title">AppsRemover</string>
    <string name="nav_header_subtitle">saathiral.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="tab_text_1">USER APPS</string>
    <string name="tab_text_2">SYSTEM APPS</string>

    <string name="connect_us_on">Connect Us On</string>
    <string name="made_in_india">MADE IN INDIA</string>
    <string name="made_for_india">MADE FOR INDIA</string>
    <string name="share_app_remover">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="buy_me_a_coffee">Buy Me a Coffee</string>
    <string name="website">\u00A9 saathiral.com</string>
    <string name="gmail">saathiral@outlook.com</string>

    <string name="uninstall">Uninstall</string>
    <string name="open">Open</string>
    <string name="details">Details</string>
    <string name="googleplay">Search in Google Play</string>
    <string name="extract">Extract APK</string>
    <string name="share">Share APK</string>

    <string name="atoz">Name (AtoZ)</string>
    <string name="ztoa">Name (ZtoA)</string>
</resources>