<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/application_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/black"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/application_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/share_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_12sdp">

                <ImageView
                    android:background="@drawable/share_white"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_5sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_app_remover"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rate_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_12sdp">

                <ImageView
                    android:background="@drawable/rate_white"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_5sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_us"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contact_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_12sdp">

                <ImageView
                    android:background="@drawable/contact_white"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_5sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textStyle="bold"/>


            </LinearLayout>

            <TextView
                android:id="@+id/connect_us_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/connect_us_on"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/facebook"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@drawable/facebook"
                    android:layout_margin="@dimen/_8sdp"/>

                <ImageButton
                    android:id="@+id/instagram"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@drawable/instagram"
                    android:layout_margin="@dimen/_8sdp"/>

                <ImageButton
                    android:id="@+id/twitter"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@drawable/twitter"
                    android:layout_margin="@dimen/_8sdp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/website"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gmail"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/buy_me_a_coffee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/buy_me_a_coffee"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"/>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/gpay"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@drawable/gpay"
                    android:layout_margin="@dimen/_8sdp"/>

                <ImageButton
                    android:id="@+id/upi"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@drawable/upi"
                    android:layout_margin="@dimen/_8sdp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/made_in_india"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/made_in_india"
                android:textColor="@color/red"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>